components/ItemComponents/Content/ItemImage/ItemImage.css
@value visualBrown from "../../../../css/colors.css";
@value smallRem from "../../../../css/breakpoints.css";

.imageWrapper {
  width: 100%;
  height: 100%;
  border-radius: 2px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 13px;
  flex-shrink: 0;
  margin-bottom: 0.75rem;
  @media (min-width: smallRem) {
    max-width: 242px;
  }
}

.imageWrapper:not(.defaultImageWrapper) {
  border: 1px solid rgba(0, 0, 0, 0.1);
  padding: 0;
}

.defaultImageWrapper {
  background-color: visualBrown;

  & img {
    opacity: 0.35;
  }
}

.image {
  max-width: 100%;
  max-height: 100%;
}

